CELIX-391: Fix for utils_stringHash